--- a/FMOD - Studio Api/Projects/FMOD/FMOD.vcxproj.filters
+++ b/FMOD - Studio Api/Projects/FMOD/FMOD.vcxproj.filters
@@ -13,10 +13,36 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Header Files\LowLevelSystem">
+      <UniqueIdentifier>{93c18897-484f-4866-a800-016ee28588fc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\LowLevelSystem">
+      <UniqueIdentifier>{ac8bc440-024e-4d09-8b13-f5a8ebc585b9}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Src\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Src\LowLevelSystem.cpp">
+      <Filter>Source Files\LowLevelSystem</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Src\Sound3D.cpp">
+      <Filter>Source Files\LowLevelSystem</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Src\Sound.cpp">
+      <Filter>Source Files\LowLevelSystem</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\Src\LowLevelSystem.h">
+      <Filter>Header Files\LowLevelSystem</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Src\Sound3D.h">
+      <Filter>Header Files\LowLevelSystem</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Src\Sound.h">
+      <Filter>Header Files\LowLevelSystem</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
