--- a/FMOD - Studio Api/Projects/FMOD/FMOD.vcxproj
+++ b/FMOD - Studio Api/Projects/FMOD/FMOD.vcxproj
@@ -19,12 +19,14 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\Src\AudioGeometry.cpp" />
     <ClCompile Include="..\..\Src\LowLevelSystem.cpp" />
     <ClCompile Include="..\..\Src\main.cpp" />
     <ClCompile Include="..\..\Src\Sound.cpp" />
     <ClCompile Include="..\..\Src\Sound3D.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\Src\AudioGeometry.h" />
     <ClInclude Include="..\..\Src\LowLevelSystem.h" />
     <ClInclude Include="..\..\Src\Sound.h" />
     <ClInclude Include="..\..\Src\Sound3D.h" />
